# wasm-things

./: .gitignore
component-host/: Cargo.toml  hello_component.wasm
component-host/src/: hello_component.rs  main.rs
gcd/: Cargo.toml
gcd/src/: main.rs
hello_component/: Cargo.toml
hello_component/src/: bindings.rs  lib.rs
hello_component/wit/: world.wit
hello_world/: Cargo.toml
hello_world/src/: main.rs
import_host/: Cargo.toml
import_host/src/: main.rs
memory/: Cargo.toml
memory/src/: main.rs
wasi/: Cargo.toml
wasi/src/: main.rs
wasi/wasm/src/: main.rs
wasmtime_hello/: Cargo.toml
